--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.WeTok">
         <activity
+            android:name=".view.RegisterNextActivity"
+            android:exported="true" />
+        <activity
             android:name=".view.RegisterActivity"
-            android:exported="true"  />
+            android:exported="true" />
         <activity
             android:name=".view.MainPageActivity"
             android:exported="true" />
