--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,18 @@
         </activity>
 
         <activity
+            android:name=".view.SendPostActivity"
+            android:exported="true">
+
+        </activity>
+
+        <activity
+            android:name=".view.SearchActivity"
+            android:exported="true">
+
+        </activity>
+
+        <activity
             android:name=".view.ProfileActivity"
             android:exported="true">
 
