--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,5 +47,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
     implementation 'com.hbb20:ccp:2.5.4'
+    // Required -- JUnit 4 framework
+    testImplementation 'junit:junit:4.12'
 
 }
