--- a/statement-of-originality.yml
+++ b/statement-of-originality.yml
@@ -40,7 +40,7 @@ members:
   - name: Xinyue Hu
     uid: u7151386
   - name:Yuxin Hong 
-    uid:
+    uid: u6684233
   - name:Xinyu Kang
     uid:
   - name:Zhaoting Jiang
